--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO
 
+- Use devise for user management
 - Add programs that are not linked to tv rage
 - Add read flag so you can search all the programs you haven't seen
 - CSS
